--- a/src/slotmachine.css
+++ b/src/slotmachine.css
@@ -1,5 +1,16 @@
 /* ------------------------- slot machine -------------------------*/
 
+ 
+
+ 
+
+button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 .start {
   position: relative;
   border: 5px solid var(--midnight);
